feat: Add optional Rust backend for performance optimization
This commit introduces a comprehensive Rust backend implementation that provides
significant performance improvements while maintaining full compatibility with
the existing Python API.

- **New Rust modules**: Add `src/` directory with complete Rust implementation
  - `block.rs`: RustBlock and RustOldBlock with full feature parity
  - `chunk.rs`: RustChunk with streaming block iteration support
  - `region.rs`: RustRegion with efficient file parsing
  - `nbt.rs`: Fast NBT parsing using fastnbt crate
  - `errors.rs`: Custom error types with Python exception mapping

- **Hybrid backend system**: Automatically falls back to Python if Rust unavailable
- **Transparent API**: Users get optimal performance without code changes
- **Type stubs**: Complete `_rust.pyi` for proper IDE support and type checking
- **Exception mapping**: Rust errors properly converted to existing Python exceptions

- **Maturin integration**: Configure for Rust extension building
- **Cargo.toml**: Define Rust dependencies (pyo3, fastnbt, byteorder, etc.)
- **pyproject.toml**: Updated build system to support both pure Python and Rust builds
- **Requirements**: Add typing_extensions and maturin dev dependency

- **Legacy module refactor**: Move legacy code to `anvil/legacy/` subdirectory
- **Import optimization**: Smart backend selection in `__init__.py`
- **Benchmarking**: Add performance comparison tools in `benchmarks/`

- **Explicit backends**: Expose both Python and Rust implementations for advanced users
- **Version constants**: Export chunk format version constants
- **Type hints**: Improve type annotations throughout codebase
- **Error handling**: Enhanced error messages and exception hierarchy

- Rust backend provides significant speedup for region file parsing
- Efficient NBT data processing using fastnbt
- Optimized block iteration and chunk operations
- Memory-efficient data structures

- Zero breaking changes to existing API
- 

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@ examples/test_112.py
 TESTING_GUIDE.md
 *.mca
 *.bak
+
+
+# Added by cargo
+
+/target
+
+# Rust
+/target/
+Cargo.lock
+
+# Maturin
+*.so
+*.pyd
+*.dll
+
+# Benchmark results
+benchmarks/benchmark_results_*.json
+typenotes.txt
